Closed Bug 1611599 Opened 5 years ago Closed 5 years ago

gcc-10: Fails to build with mozcontainer.cpp:335:13: error: Not available before [-Werror]

Categories

(Developer Infrastructure :: Source Code Analysis, defect)

defect
Not set
normal

Tracking

(firefox74 fixed)

RESOLVED FIXED
mozilla74
Tracking Status
firefox74 --- fixed

People

(Reporter: Sylvestre, Assigned: Sylvestre)

References

Details

Attachments

(1 file)

 0:11.34 /usr/bin/g++-10 -std=gnu++17 -o Unified_cpp_widget_gtk1.o -c  -I/root/firefox-gcc-last/obj-x86_64-pc-linux-gnu/dist/stl_wrappers -I/root/firefox-gcc-last/obj-x86_64-pc-linux-gnu/dist/system_wrappers -include /root/firefox-gcc-last/config/gcc_hidden.h -U_FORTIFY_SOURCE -D_FORTIFY_SOURCE=2 -fstack-protector-strong -DDEBUG=1 -DOS_POSIX=1 -DOS_LINUX=1 -DCAIRO_GFX '-DMOZ_APP_NAME="firefox"' -DSTATIC_EXPORTABLE_JS_API -DMOZ_HAS_MOZGLUE -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -I/root/firefox-gcc-last/widget/gtk -I/root/firefox-gcc-last/obj-x86_64-pc-linux-gnu/widget/gtk -I/root/firefox-gcc-last/obj-x86_64-pc-linux-gnu/ipc/ipdl/_ipdlheaders -I/root/firefox-gcc-last/ipc/chromium/src -I/root/firefox-gcc-last/ipc/glue -I/root/firefox-gcc-last/layout/base -I/root/firefox-gcc-last/layout/generic -I/root/firefox-gcc-last/layout/xul -I/root/firefox-gcc-last/other-licenses/atk-1.0 -I/root/firefox-gcc-last/widget -I/root/firefox-gcc-last/widget/headless -I/root/firefox-gcc-last/widget/x11 -I/root/firefox-gcc-last/obj-x86_64-pc-linux-gnu/dist/include -I/root/firefox-gcc-last/obj-x86_64-pc-linux-gnu/dist/include/nspr -I/root/firefox-gcc-last/obj-x86_64-pc-linux-gnu/dist/include/nss -fPIC -DMOZILLA_CLIENT -include /root/firefox-gcc-last/obj-x86_64-pc-linux-gnu/mozilla-config.h -Wall -Wempty-body -Wignored-qualifiers -Woverloaded-virtual -Wpointer-arith -Wsign-compare -Wtype-limits -Wunreachable-code -Wwrite-strings -Wno-invalid-offsetof -Wc++2a-compat -Wduplicated-cond -Wimplicit-fallthrough -Wno-error=maybe-uninitialized -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=coverage-mismatch -Wno-error=free-nonheap-object -Wno-multistatement-macros -Wno-error=class-memaccess -Wno-error=deprecated-copy -Wformat -Wformat-overflow=2 -fno-sized-deallocation -fno-aligned-new -Wno-error=class-memaccess -Wno-error=format-overflow -Wno-error=stringop-truncation -Wno-stringop-overflow -Wno-error=attributes -Wno-error=deprecated-copy -Wno-error=pessimizing-move -Wno-error=type-limits -fno-exceptions -fno-strict-aliasing -fno-rtti -fno-exceptions -fno-math-errno -pthread -pipe -g -freorder-blocks -Os -fno-omit-frame-pointer -funwind-tables -Werror -I/root/firefox-gcc-last/widget/gtk/compat-gtk3 -pthread -I/usr/include/gtk-3.0/unix-print -I/usr/include/gtk-3.0 -I/usr/include/at-spi2-atk/2.0 -I/usr/include/at-spi-2.0 -I/usr/include/dbus-1.0 -I/usr/lib/x86_64-linux-gnu/dbus-1.0/include -I/usr/include/gtk-3.0 -I/usr/include/cairo -I/usr/include/pango-1.0 -I/usr/include/harfbuzz -I/usr/include/pango-1.0 -I/usr/include/fribidi -I/usr/include/atk-1.0 -I/usr/include/cairo -I/usr/include/pixman-1 -I/usr/include/uuid -I/usr/include/freetype2 -I/usr/include/libpng16 -I/usr/include/gdk-pixbuf-2.0 -I/usr/include/gio-unix-2.0 -I/usr/include/libmount -I/usr/include/blkid -I/usr/include/glib-2.0 -I/usr/lib/x86_64-linux-gnu/glib-2.0/include -pthread -I/usr/include/gtk-3.0 -I/usr/include/at-spi2-atk/2.0 -I/usr/include/at-spi-2.0 -I/usr/include/dbus-1.0 -I/usr/lib/x86_64-linux-gnu/dbus-1.0/include -I/usr/include/gtk-3.0 -I/usr/include/gio-unix-2.0 -I/usr/include/cairo -I/usr/include/pango-1.0 -I/usr/include/harfbuzz -I/usr/include/pango-1.0 -I/usr/include/fribidi -I/usr/include/atk-1.0 -I/usr/include/cairo -I/usr/include/pixman-1 -I/usr/include/uuid -I/usr/include/freetype2 -I/usr/include/libpng16 -I/usr/include/gdk-pixbuf-2.0 -I/usr/include/libmount -I/usr/include/blkid -I/usr/include/glib-2.0 -I/usr/lib/x86_64-linux-gnu/glib-2.0/include -I/usr/include/libdrm -I/usr/include/dbus-1.0 -I/usr/lib/x86_64-linux-gnu/dbus-1.0/include -I/usr/include/glib-2.0 -I/usr/lib/x86_64-linux-gnu/glib-2.0/include -Wno-error=shadow  -MD -MP -MF .deps/Unified_cpp_widget_gtk1.o.pp  -fdiagnostics-color  Unified_cpp_widget_gtk1.cpp
 0:11.91 In file included from Unified_cpp_widget_gtk1.cpp:38:
 0:11.91 /root/firefox-gcc-last/widget/gtk/mozcontainer.cpp:265:13: error: Not available before  [-Werror]
 0:11.92   265 |   g_clear_pointer(&container->frame_callback_handler, wl_callback_destroy);
 0:11.92       |             ^~~~~~~~~~~~~~~~~~~~~~~
 0:11.92 /root/firefox-gcc-last/widget/gtk/mozcontainer.cpp:303:13: error: Not available before  [-Werror]
 0:11.92   303 |     g_clear_pointer(&container->frame_callback_handler, wl_callback_destroy);
 0:11.92       |             ^~~~~~~~~~~~~~~~~~~~~~~
 0:11.92 /root/firefox-gcc-last/widget/gtk/mozcontainer.cpp:332:13: error: Not available before  [-Werror]
 0:11.92   332 |   g_clear_pointer(&container->eglwindow, wl_egl_window_destroy);
 0:11.92       |             ^~~~~~~~~~~~~~~~~~~~~~~
 0:11.92 /root/firefox-gcc-last/widget/gtk/mozcontainer.cpp:333:13: error: Not available before  [-Werror]
 0:11.92   333 |   g_clear_pointer(&container->subsurface, wl_subsurface_destroy);
 0:11.92       |             ^~~~~~~~~~~~~~~~~~~~~~~
 0:11.92 /root/firefox-gcc-last/widget/gtk/mozcontainer.cpp:334:13: error: Not available before  [-Werror]
 0:11.92   334 |   g_clear_pointer(&container->surface, wl_surface_destroy);
 0:11.92       |             ^~~~~~~~~~~~~~~~~~~~~~~
 0:11.92 /root/firefox-gcc-last/widget/gtk/mozcontainer.cpp:335:13: error: Not available before  [-Werror]
 0:11.92   335 |   g_clear_pointer(&container->frame_callback_handler, wl_callback_destroy);
 0:11.92       |             ^~~~~~~~~~~~~~~~~~~~~~~
 0:19.72 In file included from /root/firefox-gcc-last/obj-x86_64-pc-linux-gnu/ipc/ipdl/_ipdlheaders/mozilla/dom/PContentParent.h:25,
 0:19.72                  from /root/firefox-gcc-last/obj-x86_64-pc-linux-gnu/dist/include/mozilla/dom/ContentParent.h:10,
 0:19.72                  from /root/firefox-gcc-last/widget/nsBaseDragService.h:16,
 0:19.72                  from /root/firefox-gcc-last/widget/gtk/nsDragService.h:11,
 0:19.72                  from /root/firefox-gcc-last/widget/gtk/nsClipboardWayland.cpp:21,
 0:19.72                  from Unified_cpp_widget_gtk1.cpp:92:

With both glib 2.63.3-3 & 2.62.4-1+b1

Passing -DGLIB_DISABLE_DEPRECATION_WARNINGS removes the warning/error

Assignee: nobody → sledru
Status: NEW → ASSIGNED
Pushed by sledru@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/26d953ae4cf6 gcc-10: Add an explicit include to glib.h r=stransky
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla74
Product: Firefox Build System → Developer Infrastructure
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: