Bug 1611599 - gcc-10: Add an explicit include to glib.h r=stransky

Differential Revision: https://phabricator.services.mozilla.com/D61064

--HG--
extra : moz-landing-system : lando